// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Filter AddedFilter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <h2>
          Added
        </h2>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter AsyncFilter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: inherit;
  position: relative;
}

.emotion-2 #unique-tooltip-id {
  display: none!important;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div>
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="filter"
              >
                <div
                  class="emotion-5"
                >
                  <div
                    class="emotion-6"
                  >
                    <div
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <div
                          data-testid="filter-label"
                        >
                          Async Label : 
                        </div>
                        <span
                          class="emotion-9"
                          data-testid="filter-selected-item-label"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-11"
                        fill="none"
                        viewBox="0 0 12 6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter AsyncFilterWithMinCharacters smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: inherit;
  position: relative;
}

.emotion-2 #unique-tooltip-id {
  display: none!important;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div>
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <button
                class="emotion-4"
                data-testid="filter"
              >
                <div
                  class="emotion-5"
                >
                  <div
                    class="emotion-6"
                  >
                    <div
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <div
                          data-testid="filter-label"
                        >
                          Async Label : 
                        </div>
                        <span
                          class="emotion-9"
                          data-testid="filter-selected-item-label"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-11"
                        fill="none"
                        viewBox="0 0 12 6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                          fill="#0E0E17"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter MultiFilter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  height: 200px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 72px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.emotion-6 {
  overflow: inherit;
  text-overflow: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: inherit;
  position: relative;
}

.emotion-6 #unique-tooltip-id {
  display: none!important;
}

.emotion-7 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-8 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-8:hover>div {
  background-color: #f3f5f8;
}

.emotion-8:active>div {
  background-color: #e7ebf2;
}

.emotion-8:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-8:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-9 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-9:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-11 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-12 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-12 span {
  font-weight: 700;
}

.emotion-13 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-14 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-15 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-15 path {
  fill: #0f0f17;
}

.emotion-27 {
  position: absolute;
  bottom: 15%;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <h4>
                    MultiFilter with simple Search
                  </h4>
                  <div>
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                      >
                        <button
                          class="emotion-8"
                          data-testid="filter"
                        >
                          <div
                            class="emotion-9"
                          >
                            <div
                              class="emotion-10"
                            >
                              <div
                                class="emotion-11"
                              >
                                <span
                                  class="emotion-12"
                                >
                                  <div
                                    data-testid="filter-label"
                                  >
                                    Label : 
                                  </div>
                                  <span
                                    class="emotion-13"
                                    data-testid="filter-selected-item-label"
                                  >
                                    Default value
                                  </span>
                                </span>
                              </div>
                              <span
                                class="emotion-14"
                              >
                                <svg
                                  class="emotion-15"
                                  fill="none"
                                  viewBox="0 0 12 6"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                                    fill="#0E0E17"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-5"
                >
                  <h4>
                    MultiFilter with async Search
                  </h4>
                  <div>
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                      >
                        <button
                          class="emotion-8"
                          data-testid="filter"
                        >
                          <div
                            class="emotion-9"
                          >
                            <div
                              class="emotion-10"
                            >
                              <div
                                class="emotion-11"
                              >
                                <span
                                  class="emotion-12"
                                >
                                  <div
                                    data-testid="filter-label"
                                  >
                                    Label : 
                                  </div>
                                  <span
                                    class="emotion-13"
                                    data-testid="filter-selected-item-label"
                                  >
                                    Default value
                                  </span>
                                </span>
                              </div>
                              <span
                                class="emotion-14"
                              >
                                <svg
                                  class="emotion-15"
                                  fill="none"
                                  viewBox="0 0 12 6"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                                    fill="#0E0E17"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-27"
                >
                  <h4>
                    MultiFilter - Bottom Positioning
                  </h4>
                  <div>
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                      >
                        <button
                          class="emotion-8"
                          data-testid="filter"
                        >
                          <div
                            class="emotion-9"
                          >
                            <div
                              class="emotion-10"
                            >
                              <div
                                class="emotion-11"
                              >
                                <span
                                  class="emotion-12"
                                >
                                  <div
                                    data-testid="filter-label"
                                  >
                                    Label : 
                                  </div>
                                  <span
                                    class="emotion-13"
                                    data-testid="filter-selected-item-label"
                                  >
                                    Default value
                                  </span>
                                </span>
                              </div>
                              <span
                                class="emotion-14"
                              >
                                <svg
                                  class="emotion-15"
                                  fill="none"
                                  viewBox="0 0 12 6"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                                    fill="#0E0E17"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter Playground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-5 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-5:hover>div {
  background-color: #d0defd;
}

.emotion-5:active>div {
  background-color: #b9cdfc;
}

.emotion-5:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-5:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-6 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: black;
  background-color: #e7eefe;
  border: solid 0.0625rem #1451dc;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-6:hover {
  border: solid 0.0625rem #1451dc;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-8 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-9 {
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-9 span {
  font-weight: 700;
}

.emotion-10 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-12 path {
  fill: #0f0f17;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div>
            filled(primary): 
          </div>
          <div>
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <button
                  class="emotion-5"
                  data-testid="filter"
                >
                  <div
                    class="emotion-6"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div
                        class="emotion-8"
                      >
                        <span
                          class="emotion-9"
                        >
                          <div
                            data-testid="filter-label"
                          >
                            you can change me : 
                          </div>
                          <span
                            class="emotion-10"
                            data-testid="filter-selected-item-label"
                          >
                            Peach
                          </span>
                        </span>
                      </div>
                      <span
                        class="emotion-11"
                      >
                        <svg
                          class="emotion-12"
                          fill="none"
                          viewBox="0 0 12 6"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                            fill="#0E0E17"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter PresetFilter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <h2>
          Preset
        </h2>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Filter SearchableFilter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  overflow: inherit;
  text-overflow: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: inherit;
  position: relative;
}

.emotion-4 #unique-tooltip-id {
  display: none!important;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-6 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-6:hover>div {
  background-color: #f3f5f8;
}

.emotion-6:active>div {
  background-color: #e7ebf2;
}

.emotion-6:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-6:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-7 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-7:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-9 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-10 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-10 span {
  font-weight: 700;
}

.emotion-11 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-12 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-13 path {
  fill: #0f0f17;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div>
                filled(primary): 
              </div>
              <div>
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <button
                      class="emotion-6"
                      data-testid="filter"
                    >
                      <div
                        class="emotion-7"
                      >
                        <div
                          class="emotion-8"
                        >
                          <div
                            class="emotion-9"
                          >
                            <span
                              class="emotion-10"
                            >
                              <div
                                data-testid="filter-label"
                              >
                                Label : 
                              </div>
                              <span
                                class="emotion-11"
                                data-testid="filter-selected-item-label"
                              >
                                Default value
                              </span>
                            </span>
                          </div>
                          <span
                            class="emotion-12"
                          >
                            <svg
                              class="emotion-13"
                              fill="none"
                              viewBox="0 0 12 6"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                                fill="#0E0E17"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
